# -fsoft2026_1DD_5

./: CMakeLists.txt
Project/: Biblioteca.cpp  Biblioteca.h  Bibliotecario.cpp  CMakeLists.txt  Livro.cpp  Livro.h  Requisicao.cpp  Requisicao.h  Utente.cpp  Utente.h  main.cpp
Project/Include/: Biblioteca.h  Bibliotecario.h  Interface.h  Livro.h  Requisicao.h  Utente.h
Project/src/: Biblioteca.cpp  Bibliotecario.cpp  Interface.cpp  Livro.cpp  Requisicao.cpp  Utente.cpp  main.cpp
ProjectTester/: CMakeLists.txt  tests.cpp
